# Changelog

MäCAN-Sever by Maximilian Goldschmidt


## [2018-06-28.3]
### Fixed
- mfx/M4-Anmeldung überarbeitet.

## [2018-06-28.2]
### Added
- Die Lokliste wird nun zusätzlich als "lokomotive.cs2" gespeichert, um sie Anwendungen, die diese benötigen, zur verfügung zu stellen
- Einträge in der Hilfe

## [2018-06-28.1]
### Added
- Grunlagen für eine integrierte Hilfe
- Einstellungen für CAN-Geräte werden für die Dauer einer Sitzung in der Geräteliste gespeichert
- Möglichkeit, den MFX-Neuanmeldezähler zu erhöhen, um verlorene Loks wieder zu finden

### Fixed
- In schmalen Fenstern kann jetzt horizontal mit dem Mausrad durch die Tabs gescrollt werden

## [2018-06-27.1]
### Fixes
- Anpassungen für den Onion Omega2+